<resources>
    <string name="app_name">Project Santa Claus</string>
    <string name="user_name">User Name</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="last_name">Last Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="request_otp">Request OTP</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="new_join_now">New? Join Now</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_conversation">ConversationActivity</string>
    <string name="first_name">First Name</string>
    <string name="already_registered_signin">Already Registered?Signin</string>
    <string name="title_activity_image_info">ImageInfoActivity</string>
</resources>
